objects/CCPA_Action__c.object
<CustomObject>
    <fields>
        <fullName>CCPA_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCPA Request</label>
        <referenceTo>CCPA_Request__c</referenceTo>
        <relationshipLabel>CCPA Actions</relationshipLabel>
        <relationshipName>CCPA_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Name__c</fullName>
        <label>Key Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Value_2__c</fullName>
        <label>Key Value 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Value__c</fullName>
        <label>Key Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Cloud_Status__c</fullName>
        <label>Marketing Cloud Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No Action</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Cloud_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Cloud Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>CCPA Action</label>
    <nameField>
        <label>CCPA Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCPA Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>